Add listView, DetailView, Template for collection

--- a/recipes/templates/base.html
+++ b/recipes/templates/base.html
@@ -27,7 +27,7 @@
           <a href="{% url 'recipe:recipe_list' %}" class="hover:text-cyan-700 font-bold mx-3 text-lg"
             >Recipes</a
           >
-          <a href="" class="hover:text-cyan-700 font-bold mx-3 text-lg"
+          <a href="{% url 'recipe:collection_list' %}" class="hover:text-cyan-700 font-bold mx-3 text-lg"
             >Collection</a
           >
         </div>
