--- a/recipes/templates/collection/collections_list.html
+++ b/recipes/templates/collection/collections_list.html
@@ -2,6 +2,11 @@
 {% block content %}
 <div class="container mx-auto py-8 px-32">
     <h1 class="text-4xl font-bold mb-6">Collections</h1>
+    <div class="flex justify-end">
+        <a href="{% url 'recipe:collection_create' %}"
+            class="btn bg-emerald-900 text-white rounded-full px-6 py-3 text-xl font-bold">Create
+            Collection</a>
+    </div>
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
         {% for collection in collections %}
         <div class="bg-white rounded-lg shadow-md p-4">
