--- a/recipes/templates/collection/collection_form.html
+++ b/recipes/templates/collection/collection_form.html
@@ -21,10 +21,10 @@
             </div>
             {% endfor %}
         </div>
-        <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+        <button type="submit" class="bg-orange-500 hover:bg-orange-600 text-white font-bold py-2 px-4 rounded">
             {% if collection %}Update Collection{% else %}Create Collection{% endif %}
         </button>
-        <a href="{% url 'recipe:collection_list' %}" class="inline-block mt-4 text-gray-500">Cancel</a>
+        <a href="{% url 'recipe:collection_list' %}" class="inline-block mt-4 text-black-500 ml-4 bg-blue-200 font-bold py-2 px-4 rounded">Cancel</a>
     </form>
 </div>
 {% endblock content %}
