--- a/recipes/templates/recipes/recipe_detail.html
+++ b/recipes/templates/recipes/recipe_detail.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="bg-white w-3/5 mx-auto px-4 py-2 rounded-md drop-shadow-md mb-6">
-        <h3 class="text-xl font-semibold text-gray-800 mb-4">Ingredients</h3>
+        <h3 class="text-2xl font-bold text-green-800 mb-4">Ingredients :</h3>
         <ul class="list-disc pl-6 space-y-2">
             {% for ingredient in recipe.ingredients.all %}
                 <li>{{ ingredient.name }} - {{ ingredient.quantity }}</li>
@@ -50,7 +50,7 @@
     </div>
 
     <div class="bg-white w-3/5 mx-auto px-4 py-2 rounded-md drop-shadow-md mb-6">
-        <h3 class="text-xl font-semibold text-gray-800 mb-4">Instructions</h3>
+        <h3 class="text-2xl font-bold text-green-800 mb-4">Instructions :</h3>
         <div class="text-gray-700">
             <trix-editor input="recipe_instructions" readonly>{{ recipe.instructions|safe }}</trix-editor>
         </div>
