--- a/recipes/templates/base.html
+++ b/recipes/templates/base.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="{% static 'css/home.css/' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/trix/1.3.1/trix.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/trix/1.3.1/trix.min.js"></script>    
+    {%block extra_head %}{%endblock extra_head%}
   </head>
   <body class="">
     <nav class="nav">
@@ -36,5 +37,6 @@
     {%block content%}
     {%endblock content%}
     {%include 'footer.html'%}
+    {%block extra_script%}{%endblock extra_script%}
   </body>
 </html>
