--- a/recipes/templates/collection/collection_form.html
+++ b/recipes/templates/collection/collection_form.html
@@ -1,4 +1,7 @@
 {% extends 'base.html' %}
+{%block extra_head %}
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+{%endblock extra_head%}
 {% block content %}
 <div class="container mx-auto py-8">
     <h1 class="text-3xl font-bold mb-6">
@@ -7,11 +10,8 @@
     
     <form method="post" class="bg-white rounded-lg shadow-md p-6" novalidate>
         {% csrf_token %}
-
-        <!-- Include the reusable form template -->
         {% include 'includes/_forms.html' %}
 
-        <!-- Submit and Cancel Buttons -->
         <button type="submit" class="bg-orange-500 hover:bg-orange-600 text-white font-bold py-2 px-4 rounded">
             {% if collection %}Update Collection{% else %}Create Collection{% endif %}
         </button>
@@ -19,3 +19,6 @@
     </form>
 </div>
 {% endblock content %}
+{%block extra_script%}
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+{%endblock extra_script%}
