--- a/recipes/templates/includes/_forms.html
+++ b/recipes/templates/includes/_forms.html
@@ -1,26 +1,26 @@
 {% load widget_tweaks %}
 
 {% for field in form %}
-  <div class="form-group mb-3">
-    <span class="font-semibold">{{ field.label_tag }}</span>
+  <div class="mb-4">
+    <label class="font-semibold block mb-1">{{ field.label_tag }}</label>
 
     {% if form.is_bound %}
       {% if field.errors %}
-        {% render_field field class="form-control is-invalid" %}
+        {% render_field field class="border-red-500 bg-red-50 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-red-500" %}
         {% for error in field.errors %}
-          <div class="invalid-feedback">
+          <p class="text-red-500 text-sm mt-1">
             {{ error }}
-          </div>
+          </p>
         {% endfor %}
       {% else %}
-        {% render_field field class="form-control is-valid" %}
+        {% render_field field class="border-green-500 bg-green-50 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-green-500" %}
       {% endif %}
     {% else %}
-      {% render_field field class="form-control" %}
+      {% render_field field class="border-gray-300 rounded-md p-2 focus:outline-none focus:ring-2 focus:ring-blue-500" %}
     {% endif %}
 
     {% if field.help_text %}
-      <small class="form-text text-muted">
+      <small class="text-gray-500">
         {{ field.help_text }}
       </small>
     {% endif %}
