--- a/recipes/templates/base.html
+++ b/recipes/templates/base.html
@@ -12,12 +12,13 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp,container-queries"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="{% static 'css/home.css/' %}">
+    <link rel="stylesheet" href="{% static 'css/home.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/trix/1.3.1/trix.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/trix/1.3.1/trix.min.js"></script>    
+    {%block extra_head %}{%endblock extra_head%}
   </head>
   <body class="">
-    <nav class="nav">
+    <nav class="nav_bar">
       <div class="flex justify-between px-16 py-5">
         <a href="{%url 'recipe:home_page' %}" class="text-3xl text-emerald-600 font-bold"
           >Foodie<span class="text-pink-600">Fun</span></a
@@ -27,7 +28,7 @@
           <a href="{% url 'recipe:recipe_list' %}" class="hover:text-cyan-700 font-bold mx-3 text-lg"
             >Recipes</a
           >
-          <a href="" class="hover:text-cyan-700 font-bold mx-3 text-lg"
+          <a href="{% url 'recipe:collection_list' %}" class="hover:text-cyan-700 font-bold mx-3 text-lg"
             >Collection</a
           >
         </div>
@@ -36,5 +37,6 @@
     {%block content%}
     {%endblock content%}
     {%include 'footer.html'%}
+    {%block extra_script%}{%endblock extra_script%}
   </body>
 </html>
