--- a/recipes/templates/recipes/recipe_list.html
+++ b/recipes/templates/recipes/recipe_list.html
@@ -2,6 +2,68 @@
 <div class="mt-6 flex ml-32">
   <a href="{% url 'recipe:recipe_create'  %}" class="bg-green-700 text-white p-2 rounded-full px-10 mb-3 font-bold">Create Recipe</a>
 </div>
+<div class="mt-6 px-8 flex justify-center">
+  <form method="GET" class="mb-6 flex flex-wrap justify-start ml-6">
+    <div class="flex items-center mb-4 mr-4 w-1/4">
+        <label for="title" class="block mr-2">Search by Title</label>
+        <input type="text" id="title" name="title" placeholder="Search by title" value="{{ filter.data.title }}" class="border p-2 flex-grow">
+    </div>
+    
+    <div class="flex items-center mb-4 mr-4 w-1/4">
+        <label for="cuisine" class="block mr-2">Cuisine</label>
+        <select id="cuisine" name="cuisine" class="border p-2 flex-grow">
+            <option value="">All Cuisines</option>
+            {% for choice in filter.form.cuisine.field.choices %}
+                <option value="{{ choice.0 }}" {% if choice.0 == filter.data.cuisine %}selected{% endif %}>{{ choice.1 }}</option>
+            {% endfor %}
+        </select>
+    </div>
+    
+    <div class="flex items-center mb-4 mr-4 w-1/4">
+        <label for="difficulty_level" class="block mr-2">Difficulty Level</label>
+        <select id="difficulty_level" name="difficulty_level" class="border p-2 flex-grow">
+            <option value="">All Difficulties</option>
+            {% for choice in filter.form.difficulty_level.field.choices %}
+                <option value="{{ choice.0 }}" {% if choice.0 == filter.data.difficulty_level %}selected{% endif %}>{{ choice.1 }}</option>
+            {% endfor %}
+        </select>
+    </div>
+    
+    <div class="flex items-center mb-4 mr-4 w-1/4">
+        <label for="food_type" class="block mr-2">Food Type</label>
+        <select id="food_type" name="food_type" class="border p-2 flex-grow">
+            <option value="">All Food Types</option>
+            {% for choice in filter.form.food_type.field.choices %}
+                <option value="{{ choice.0 }}" {% if choice.0 == filter.data.food_type %}selected{% endif %}>{{ choice.1 }}</option>
+            {% endfor %}
+        </select>
+    </div>
+
+    <div class="flex items-center mb-4 mr-4 w-1/4">
+        <label for="author" class="block mr-2">Author</label>
+        <select id="author" name="author" class="border p-2 flex-grow">
+            <option value="">All Authors</option>
+            {% for user in filter.form.author.field.choices %}
+                <option value="{{ user.0 }}" {% if user.0 == filter.data.author %}selected{% endif %}>{{ user.1 }}</option>
+            {% endfor %}
+        </select>
+    </div>
+
+    <div class="flex items-center mb-4 mr-4 w-1/4">
+        <label for="sort_by" class="block mr-2">Sort By</label>
+        <select id="sort_by" name="sort_by" class="border p-2 flex-grow">
+            <option value="">Sort By</option>
+            <option value="calories_low_high" {% if filter.data.sort_by == 'calories_low_high' %}selected{% endif %}>Calories: Lowest to Highest</option>
+            <option value="calories_high_low" {% if filter.data.sort_by == 'calories_high_low' %}selected{% endif %}>Calories: Highest to Lowest</option>
+            <option value="created_at_new_old" {% if filter.data.sort_by == 'created_at_new_old' %}selected{% endif %}>Created At: Newest First</option>
+            <option value="created_at_old_new" {% if filter.data.sort_by == 'created_at_old_new' %}selected{% endif %}>Created At: Oldest First</option>
+        </select>
+    </div>
+
+    <button type="submit" class="bg-orange-500 text-white p-2 rounded-full px-10 mb-3">Search</button>
+</form>
+</div>
+
 <div class="container mx-auto py-6 px-16">
 
   <div class="mb-6">
