Update Views from function based to Class based

--- a/recipes/templates/recipes/recipe_form.html
+++ b/recipes/templates/recipes/recipe_form.html
@@ -102,7 +102,7 @@
                 <input type="text" name="ingredients-${index}-name" class="border rounded p-2" required />
                 
                 <label for="id_ingredients-${index}-quantity">Quantity</label>
-                <input type="number" name="ingredients-${index}-quantity" class="border rounded p-2" required />
+                <input type="number" name="ingredients-${index}-quantity" class="border rounded p-2" required value=1 min=1 />
 
                 <label for="id_ingredients-${index}-unit">Unit</label>
                 <select name="ingredients-${index}-unit" class="border rounded p-2 px-8">
