--- a/recipes/templates/base.html
+++ b/recipes/templates/base.html
@@ -31,6 +31,7 @@
           <a href="{% url 'recipe:collection_list' %}" class="hover:text-cyan-700 font-bold mx-3 text-lg"
             >Collection</a
           >
+          <a href="{%url 'login' %}">login</a>
         </div>
       </div>
     </nav>
