--- a/account/templates/registration/logged_out.html
+++ b/account/templates/registration/logged_out.html
@@ -5,8 +5,8 @@
   <div class="text-center bg-white p-6 rounded-lg shadow-lg max-w-md">
     <h1 class="text-2xl font-bold text-gray-800 mb-4">Logged out</h1>
     <p class="text-gray-700">
-      You have been successfully logged out.
-      You can <a href="{% url 'login' %}" class="text-indigo-600 hover:underline">log in again</a>.
+      You have been successfully logged out. <br>
+      You can  <a href="{%url 'login'%}" class="inline-block px-4 py-1 bg-green-600 text-white font-semibold rounded-lg hover:bg-green-700 transition duration-300">Login again</a>
     </p>
   </div>
 </div>
