--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -9,8 +9,6 @@
       <p class="text-red-600 mb-4">
         Your username and password didn't match. Please try again.
       </p>
-    {% else %}
-      <p class="text-gray-700 mb-4">Please, use the following form to log in:</p>
     {% endif %}
 
     <div class="login-form">
@@ -19,9 +17,8 @@
         
         <input type="hidden" name="next" value="{{ next }}" />
 
-        <!-- Render form fields -->
         <div class="space-y-2">
-          {{ form.as_p }}
+          {%include 'includes/_forms.html'%}
         </div>
 
         <button type="submit" 
@@ -29,6 +26,23 @@
           Log in
         </button>
       </form>
+
+      <div class="mt-4 text-center">
+        <!-- Forgot Password Link -->
+        <a href="{% url 'password_reset' %}" class="text-sm text-indigo-600 hover:text-indigo-700">
+          Forgot password?
+        </a>
+      </div>
+
+      <div class="mt-2 text-center">
+        <!-- Sign Up Link -->
+        <p class="text-sm text-gray-600">
+          Don't have an account? 
+          <a href="{%url 'register' %}" class="text-indigo-600 hover:text-indigo-700">
+            Sign up
+          </a>
+        </p>
+      </div>
     </div>
   </div>
 </div>
