--- a/account/templates/registration/password_change_done.html
+++ b/account/templates/registration/password_change_done.html
@@ -2,7 +2,7 @@
 {% block title %}Password changed{% endblock %}
 {% block content %}
 <div class="min-h-screen flex items-center justify-center bg-green-50">
-  <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-sm text-center">
+  <div class="bg-white p-8 rounded-lg shadow-lg  text-center">
     <h1 class="text-3xl font-semibold text-green-600 mb-4">Password Changed</h1>
     <p class="text-gray-600 mb-6">Your password has been successfully changed.</p>
   </div>
